--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 table{
     border: 1px solid black;
   }
-table td
+
+ td
 {
   margin:auto;
   padding-right: 1vw;
+  word-wrap: wrap break-word;;
+  max-width: 20vw;
   
 }
 body{
@@ -17,8 +20,15 @@ body{
   text-align: center;
 }
 
+#popButton{
+  width: 2vh;
+  padding-inline: 1vw;
+}
+
 #add_bar{
   margin-bottom: 1vh;
+  display: flex;
+  align-items: center;
 }
 
 #myForm{
